<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb6c1"
    tools:context="org.waikeiththinchun.fantasticfitness.ForgotPassword">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingTop="20dp"
        android:orientation="vertical">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editID"
        android:hint="Enter your student ID"
        android:layout_marginTop="68dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerQues"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/editID"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editAnswer"
        android:hint="@string/submitPW"
        android:layout_alignTop="@+id/spinnerQues"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    </LinearLayout>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="18dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonReset"
        android:layout_marginBottom="63dp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="18dp"
        android:layout_gravity="right"
        android:layout_alignTop="@+id/buttonConfirm"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"/>
</RelativeLayout>
