<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.edu.chiawaikeith.canteenpos.Activities.RegisterAccount">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <LinearLayout android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:overScrollMode="always">

        <LinearLayout android:orientation="vertical"
            android:id="@+id/linearlayout_sign_up_details"
            android:padding="@dimen/padding_small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_layout_margins"
            android:layout_marginTop="@dimen/login_layout_margins"
            android:layout_marginRight="@dimen/login_layout_margins"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_below="@+id/textViewSignup">

            <!--<EditText android:textSize="@dimen/font_description"-->
                <!--android:textColor="@color/black"-->
                <!--android:textColorHint="@color/black"-->
                <!--android:id="@+id/accId"-->

                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="@dimen/edittext_height"-->
                <!--android:layout_marginLeft="@dimen/margin_small"-->
                <!--android:layout_marginTop="@dimen/margin_medium"-->
                <!--android:layout_marginRight="@dimen/margin_small"-->
                <!--android:hint="@string/enterAccId"-->
                <!--android:singleLine="true"-->
                <!--android:inputType="text" />-->
                <!--android:drawableLeft="@drawable/ic_edit"-->
                <!--android:drawablePadding="@dimen/padding_small"-->

            <EditText android:textSize="@dimen/font_description"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:id="@+id/custId"

                android:layout_width="fill_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_small"
                android:hint="@string/enterStudId"
                android:singleLine="true"
                android:inputType="text" />

            <EditText android:textSize="@dimen/font_description"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:id="@+id/editUsername"

                android:layout_width="fill_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_small"
                android:hint="@string/enterName"
                android:singleLine="true"
                android:inputType="text" />

            <EditText android:textSize="@dimen/font_description"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:id="@+id/accPassword"

                android:layout_width="fill_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_small"
                android:hint="@string/submitPW"
                android:singleLine="true"
                android:inputType="textEmailAddress" />
                <!--android:drawableLeft="@drawable/ic_password"-->
                <!--android:drawablePadding="@dimen/padding_small"-->

            <!--<EditText-->
                <!--android:id="@+id/editSecurityCode"-->
                <!--android:hint="securityCode"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<EditText-->
                <!--android:hint="imagepath"-->
                <!--android:id="@+id/editImagePath"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<EditText-->
                <!--android:id="@+id/editBalance"-->
                <!--android:hint="balance"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<EditText-->
                <!--android:hint="registerDate"-->
                <!--android:id="@+id/editDate"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->


        </LinearLayout>

        <LinearLayout android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <CheckBox android:textSize="@dimen/font_description"
                android:textColor="@color/black"
                android:id="@+id/checkbox_sign_up_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:singleLine="true" />

            <TextView android:textSize="@dimen/font_description"
                android:textColor="@color/black"
                android:id="@+id/textview_sign_up_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/i_agree_terms" />
        </LinearLayout>

        <Button
            android:id="@+id/button_sign_up"
            android:background="@color/green"
            android:layout_width="250dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="20dp"
            android:text="@string/proceed"/>

        <Button
            android:id="@+id/button_reset"
            android:background="@android:color/transparent"
            android:layout_width="250dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/reset"
            android:onClick="reset"/>

    </LinearLayout>

</RelativeLayout>
